--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ img {
         height: 50px;
         background-color: #fff;
         padding: 15px 30px;
+        position: fixed;
+        width: 100%;
     }
 
     .header-logo,
